При наведении окрашивается элемент SVG

--- a/preprocessor/main.sass
+++ b/preprocessor/main.sass
@@ -1,3 +1,5 @@
+@use "mixins.sass" as *
+
 body 
     display: flex
     flex-direction: column
@@ -5,11 +7,11 @@ body
     justify-content: flex-start
     height: 100vh
     margin: 0
-    background-color: #f0f0f0
+    background-color: white
 
 .container
     display: flex
-    flex-direction: column
+    flex-direction: row
     align-items: center
     border: 2px solid black
     padding: 20px
@@ -17,12 +19,7 @@ body
     border-radius: 10px
     margin-top: 20px
     width: fit-content
-
-.buttons
-    display: flex
-    justify-content: space-between
-    margin-bottom: 10px
-    padding-top: 20px
+    
 
 .circle-button 
     width: 60px
@@ -31,28 +28,45 @@ body
     border: 2px solid black
     transition: transform 0.3s
 
+.object-other
+    width: 60px
+    height: 60px
+    border-radius: 50%
+    border: 2px solid black
+    transition: transform 0.3s
 
-/* Цвета кнопок */
+.circle-button
+    &:hover 
+        transform: scale(1.2)
+    
 .red 
     background-color: red
-
+    &:hover
+           ~
+             .svg-icon-st
+                @include set-color-svg(red)
+                
 
 .green 
     background-color: green
-
+    &:hover
+           ~
+             .svg-icon-st
+                @include set-color-svg(green)
 
 .blue 
     background-color: lightblue
-
+    &:hover
+           ~
+             .svg-icon-st
+                @include set-color-svg(lightblue)
 
 .yellow 
     background-color: yellow
-
-
-/* Эффект при наведении */
-.circle-button:hover 
-    transform: scale(1.2)
-
+    &:hover
+           ~
+             .svg-icon-st
+                @include set-color-svg(yellow)
 
 .title 
     font-size: 30px
